# Microdrop

./: .cz.toml  .gitignore  BUTTON_STYLES_MIGRATION.md  CHANGELOG.md  DOCS.md  MESSAGES.md  README.md  TODO.md  conda-patch.py  conda_patch.py  dramatiq_settings.example.json  environment.yml  environment_windows.yml  logging.json  pyinstaller.spec
BlankMicrodropCanvas/: application.py
device_viewer/: README.md  application.py  consts.py  default_settings.py  menus.py  plugin.py  preferences.ini  preferences.py  task.py
docs/: CLAUDE.md  DESIGN_HISTORY.md  ENVISAGE_TRAITS_GUIDE.md  PLUGIN_DEVELOPMENT.md  pluggable_protocol.md
dropbot_controller/: consts.py  dropbot_controller_base.py  plugin.py  preferences.py
dropbot_manual_controls/: consts.py
dropbot_preferences_ui/: consts.py  models.py  plugin.py  preferences.py
dropbot_protocol_controls/: consts.py  plugin.py
dropbot_status/: consts.py  displayed_UI.py  dock_pane.py  dramatiq_UI.py  dramatiq_dropbot_status_controller.py  dramatiq_viewcontroller.py  dramatiq_widget.py  model.py  plugin.py  status_label_widget.py  status_label_widgets.py  test.py  widget.py
dropbot_status_and_controls/: consts.py  controller.py  controls.py  dialog_views.py  dock_pane.py  menus.py  message_handler.py  model.py  plugin.py  preferences.py  view.py  view_helpers.py
dropbot_status_plot/: consts.py  dock_panes.py  plugin.py
dropbot_tools_menu/: consts.py  menus.py  plugin.py  self_test_dialogs.py  self_test_intro_dialog.py
electrode_controller/: consts.py  electrode_disable_service.py  electrode_state_change_service.py  models.py  plugin.py  test_message_model.py
examples/: FONT_PATH_MIGRATION.md  build_plugin_conda.py  build_plugin_zip.py  build_scipy_plugin_zip.py  button_styles_example.py  microdrop.py  pgva_test_ui.py  plugin_consts.py  run_device_viewer_pluggable.py  run_device_viewer_pluggable.spec  run_device_viewer_pluggable_backend.py  run_device_viewer_pluggable_dropbot_service_demo.py  run_device_viewer_pluggable_experimental.py  run_device_viewer_pluggable_frontend.py  run_dropbot_status_ui_singly.py  run_portable_dropbot_pluggable.py  run_portable_dropbot_pluggable_backend.py  run_protocol_tree_pluggable.py  (+3 more)
examples/demo_plugins/scipy_analysis/: README.md  microdrop_plugin.json  pyproject.toml
examples/demo_plugins/scipy_analysis/scipy_analysis/: consts.py  dock_pane.py
examples/demo_plugins/scipy_analysis_pkg/: microdrop_plugin.toml  pyproject.toml
examples/demo_plugins/scipy_analysis_pkg/scipy_analysis/: microdrop_plugin.toml  plugin.py
(+878 files in other folders)
