# Dependency manifest read by MicroDrop's plugin installer.
#
# Only the dependency tables below are used; everything else is ignored. The
# installer mirrors the main env's shape: conda specs from
# [tool.pixi.dependencies], PyPI specs from [project.dependencies] /
# [tool.pixi.pypi-dependencies].
#
# scipy is intentionally NOT in MicroDrop's base environment, so installing this
# plugin triggers the dependency-aware install flow: scipy is added to a
# `plugin-scipy_analysis` pixi feature + the `microdrop-plugins` environment,
# and the app offers to relaunch so scipy becomes importable. (numpy and
# matplotlib are already in the base env, so they are not declared here — only
# the genuinely missing dependency.)

[project]
name = "scipy_analysis_demo"
version = "0.1.0"

[tool.pixi.dependencies]
scipy = ">=1.10"
