[project]
name = "scipy_analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["scipy>=1.10"]

[project.entry-points."microdrop.plugins"]
scipy_analysis = "scipy_analysis"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["scipy_analysis"]

# The manifest lives at the package top level (next to this file). Ship it into
# the wheel as scipy_analysis package data so discovery finds it.
[tool.hatch.build.targets.wheel.force-include]
"microdrop_plugin.toml" = "scipy_analysis/microdrop_plugin.toml"

[tool.pixi.package]
name = "scipy_analysis"
version = "0.1.0"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "0.*"
channels = ["https://prefix.dev/conda-forge"]

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
scipy = ">=1.10"
